--- a/lib/styles/Home.module.css
+++ b/lib/styles/Home.module.css
@@ -16,6 +16,11 @@
     margin: 0;
     justify-content: center;
     align-items: center;
+    
+}
+
+.catName h3{
+    text-decoration: none;
 }
 
 .slider {
