--- a/lib/styles/Home.module.css
+++ b/lib/styles/Home.module.css
@@ -20,13 +20,12 @@
 
 }
 
-
-
 .slider {
     padding: 10vh 0 10vh 0;
     margin: 0 10vh 0 10vh;
     flex-direction: row;
     align-items: center;
+    display: flex;
 }
 
 @media (max-width:768px) {
@@ -34,6 +33,7 @@
         display: flex;
         flex-direction: column;
     }
+
     .slider {
         padding: 10vh 0 10vh 0;
         margin: 0 10vh 0 10vh;
@@ -42,6 +42,7 @@
         align-items: center;
         text-decoration: none;
     }
+
     .image img {
         width: 200px;
         position: relative;
@@ -52,19 +53,19 @@
         margin-top: 10px;
         display: flex;
         justify-content: center;
-        position: relative;
-        left: 60px;
         white-space: nowrap;
     }
 
     .category {
         margin-top: 20px;
+        display: flex;
+        flex-direction: column;
     }
-
 }
 
 .category {
-    width: 12vw;
+    width: 100%;
+    display: flex;
 }
 
 .title {
