--- a/app/globals.css
+++ b/app/globals.css
@@ -12,7 +12,9 @@
 }
 
 .text-content {
+  padding: 20px;
   color: white;
+  line-height: 74px;
   font-size: 62px;
   font-weight: 600;
   position: relative;
@@ -33,6 +35,7 @@
 
 @media (max-width: 768px) {
   .text-content {
+    line-height: 50px;
     font-size: 35px;
     padding: 0 10px;
   }
@@ -56,9 +59,6 @@
   color: #343a40 !important;
 }
 
-.text-content {
-  padding: 20px;
-}
 
 ::-webkit-scrollbar {
   width: 10px;
@@ -745,4 +745,6 @@
 .bttn{
   display: flex;
   justify-content: center;
+  border-top: 1px solid #ccc;
+  padding: 20px;
 }
